# dmcp

./: .env.example  .gitignore  Cargo.toml  MCP-REGISTRY-GUIDE.md  MCP-SYSTEM-SPEC.md  Plan.md  README.md
src/: browse.rs  config.rs  connect.rs  discovery.rs  elevation.rs  install.rs  lib.rs  main.rs  models.rs  paths.rs  sources.rs
