[package]
name = "dmcp"
version = "0.1.0"
edition = "2021"
description = "MCP Manager - discover, manage, and invoke MCP servers"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
shellexpand = "3"
